# spir_backend

./: .gitignore  CMakeLists.txt  README.md
include/llvm/SpirBackend/: SpirBitcodeWriter.h
include/spir_backend/: BitcodeWriter.h
lib/: BitcodeWriter.cpp  CMakeLists.txt  SpirBitcodeWriter.cpp  ValueEnumerator.cpp  ValueEnumerator.h
tools/: CMakeLists.txt
tools/spir-as/: CMakeLists.txt  spir-as.cpp
